<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:layout_centerHorizontal="true">

    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_loopback"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        card_view:cardElevation="10dp"
        card_view:cardBackgroundColor="@android:color/holo_orange_dark"
        card_view:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/thumbnail_loopback"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:padding="5dp"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"
            android:src="@drawable/loop" />

        <TextView
            android:id="@+id/info_text_loopback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/thumbnail_loopback"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/loopback" />

        <TextView
            android:id="@+id/info_text_loopback_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_text_loopback"
            android:layout_toRightOf="@id/thumbnail_loopback"
            android:padding="2dp"
            android:textColor="#f0f0f0"
            android:textSize="12dp"
            android:text="@string/loopback_desc" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_voice_ptt"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        card_view:cardElevation="10dp"
        card_view:cardBackgroundColor="@android:color/holo_purple"
        card_view:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/thumbnail_voice_ptt"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:padding="5dp"
                android:layout_alignParentStart="true"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:src="@drawable/voice" />
        <TextView
            android:id="@+id/info_text_voice_ptt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/thumbnail_voice_ptt"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/voice_ptt" />

        <TextView
            android:id="@+id/info_text_voice_ptt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_text_voice_ptt"
            android:layout_toRightOf="@id/thumbnail_voice_ptt"
            android:padding="2dp"
            android:textColor="#f0f0f0"
            android:textSize="12dp"
            android:text="@string/voice_ptt_desc" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_live_streaming"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        card_view:cardElevation="10dp"
        card_view:cardBackgroundColor="@android:color/holo_blue_bright"
        card_view:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/thumbnail_live_streaming"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:padding="5dp"
                android:layout_alignParentStart="true"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:src="@drawable/camera" />
        <TextView
            android:id="@+id/info_text_live_streaming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/thumbnail_live_streaming"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/live_streaming" />
        <TextView
            android:id="@+id/info_text_live_streaming_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_text_live_streaming"
            android:layout_toRightOf="@id/thumbnail_live_streaming"
            android:padding="2dp"
            android:textColor="#f0f0f0"
            android:textSize="12dp"
            android:text="@string/live_streaming_desc" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_video_meet"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        card_view:cardElevation="10dp"
        card_view:cardBackgroundColor="@android:color/holo_green_light"
        card_view:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/thumbnail_video_meet"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:padding="5dp"
                android:layout_alignParentStart="true"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:src="@drawable/meeting" />
        <TextView
            android:id="@+id/info_text_video_meet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/thumbnail_video_meet"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/video_meet" />
        <TextView
            android:id="@+id/count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_text_video_meet"
            android:layout_toRightOf="@id/thumbnail_video_meet"
            android:padding="2dp"
            android:textColor="#f0f0f0"
            android:textSize="12dp"
            android:text="@string/video_meet_desc" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_instant_message"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        card_view:cardElevation="10dp"
        card_view:cardBackgroundColor="@android:color/darker_gray"
        card_view:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/thumbnail_instant_message"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:padding="5dp"
                android:layout_alignParentStart="true"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:src="@drawable/chat" />
        <TextView
            android:id="@+id/info_text_instant_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/thumbnail_instant_message"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/instant_message" />
        <TextView
            android:id="@+id/info_text_instant_message_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_text_instant_message"
            android:layout_toRightOf="@id/thumbnail_instant_message"
            android:padding="2dp"
            android:textColor="#f0f0f0"
            android:textSize="12dp"
            android:text="@string/instant_message_desc" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
